# socketio-client-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: tasks.json
crates/component-emitter/: Cargo.toml
crates/component-emitter/src/: lib.rs  listener_impl.rs
crates/engine-io/: Cargo.toml
crates/engine-io/src/: lib.rs  options.rs
crates/impl-emitter-macro/: Cargo.toml
crates/impl-emitter-macro/src/: lib.rs  utils.rs
crates/js-raw/: Cargo.toml  build.rs
crates/js-raw/src/: global.rs  js_option.rs  lib.rs  undefined_option.rs  utils.rs
crates/scw-component-emitter/: Cargo.toml
crates/scw-component-emitter/src/: lib.rs  listener_impl.rs
crates/scw-impl-emitter-macro/: Cargo.toml
crates/scw-impl-emitter-macro/src/: lib.rs
crates/scw-js-raw/: Cargo.toml
crates/scw-js-raw/src/: lib.rs  to_js.rs
crates/scw-socket-io/: Cargo.toml
crates/scw-socket-io/src/: engine_io.rs  manager.rs  socket.rs
crates/scw-socket-io/src/manager/: options.rs
crates/scw-socket-io/src/socket/: options.rs  reason.rs
crates/socket-io/: Cargo.toml
crates/socket-io/src/: engine_io.rs  lib.rs  manager.rs  socket.rs
crates/socket-io/src/manager/: options.rs  parser.rs
crates/socket-io/src/socket/: options.rs  reason.rs
examples/hello-world/: Cargo.toml  index.html
examples/hello-world/src/: main.rs
src/: io.rs  js_sys.rs  lib.rs  prelude.rs
src/io/: builder.rs  options.rs
