[package]
name = "socketio-client-wasm"
version = "1.0.0"
edition = "2024"
license = "MIT"

[workspace]
members = ["examples/hello-world", "crates/*"]

[workspace.dependencies]
scw-js-raw = { path = "crates/scw-js-raw" }
scw-component-emitter = { path = "crates/scw-component-emitter" }
scw-impl-emitter-macro = { path = "crates/scw-impl-emitter-macro" }
scw-socket-io = { path = "crates/scw-socket-io" }
socketio-client-wasm = { path = "." }

[dependencies]
scw-js-raw = { workspace = true }
scw-component-emitter = { workspace = true }
scw-socket-io = { workspace = true }
